--- a/REDESIGN/assets/css/site.css
+++ b/REDESIGN/assets/css/site.css
@@ -1,1 +1,34 @@
 @charset 'utf-8'
+/* Navigation Bar */
+.container-fluid
+{
+	padding: 0 10% 0 10%;
+}
+.navbar 
+{
+	margin-bottom: 0;
+}
+
+/* Main Divs */
+.wrapper 
+{
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin-bottom: -150px;
+}
+.page-section {
+	width: 80%;
+	margin: 0 auto;
+}
+
+/* Footer */
+footer
+{
+	padding: 10px;
+	height: 150px;
+}
+.push 
+{
+	height: 150px;
+}
