added most of my resume information onto the index page, also added a float cleared div to format my resume portion

--- a/REDESIGN/assets/css/site.css
+++ b/REDESIGN/assets/css/site.css
@@ -32,3 +32,17 @@ footer
 {
 	height: 150px;
 }
+
+/* Text */
+.alignright
+{
+	float: right;
+}
+.alignleft
+{
+	float: left;
+}
+.floatCleared
+{
+	clear: both;
+}
