--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -4,6 +4,7 @@ body
 	width: 80%;
 	margin: 0 auto;
 }
+
 /* Navigation Bar */
 .container-fluid
 {
@@ -15,6 +16,11 @@ body
 }
 
 /* Main Divs */
+.main
+{
+	width: 80%;
+	margin: 0 auto;
+}
 
 /* Footer */
 footer
