--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -20,11 +20,10 @@ body
 	margin-bottom: 0;
 }
 
-/* Main Divs */
-.main
+/* Main Div Components */
+.jumbotron
 {
-	width: 80%;
-	margin: 0 auto;
+	width: 100% !important;
 }
 
 /* Footer */
