added repo.js, modified projects page, added images

--- a/assets/css/color-codes.css
+++ b/assets/css/color-codes.css
@@ -26,7 +26,7 @@
 .color-secondary-2-4 { color: #3C5100 }
 
 .color-complement-0 { color: #AAA539 }	/* Main Complement color */
-.color-complement-1 { color: #FFFBAA }
+.color-complement-1 { color: #FFFB00 }
 .color-complement-2 { color: #D4D06A }
 .color-complement-3 { color: #807B15 }
 .color-complement-4 { color: #555100 }
