--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -31,7 +31,7 @@ body
 }
 .projectImg
 {
-	width: 100%;
+	width: 80%;
 	margin: 0 auto;
 	height: 200px;
 }
@@ -43,6 +43,10 @@ body
 .carousel-indicators
 {
 	bottom: 10px !important;
+}
+.carousel
+{
+	margin: 0 auto;
 }
 
 /* Footer */
