--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,14 +1,15 @@
 @charset 'utf-8'
 body
 {
-	width: 80%;
 	margin: 0 auto;
 }
+
+/* Major Divs */
 .wrapper
 {
 	width: 80%;
 	margin: 0 auto;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 /* Navigation Bar */
@@ -18,6 +19,8 @@ body
 }
 .navbar 
 {
+    margin-left: 10%;
+    margin-right: 10%;
 	margin-bottom: 0;
 }
 
@@ -25,6 +28,10 @@ body
 #socialMediaLinks 
 {
     
+}
+#socialMediaLinks li
+{
+    display: inline;
 }
 
 /* Footer */
