--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,7 +1,9 @@
-@charset 'utf-8'
-body
+@charset "UTF-8";
+html 
 {
-	margin: 0 auto;
+    overflow-y: scroll;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 /* Major Divs */
@@ -13,11 +15,21 @@ body
 }
 
 /* Navigation Bar */
+.navbar-brand
+{
+    padding: 0px !important;
+    margin: 0px !important;
+}
+.navbar-brand img
+{
+    height: 50px;
+    padding: 0px;
+}
 .container-fluid
 {
-	padding: 0 10% 0 10%;
+	margin: 0 10% 0 10%;
 }
-.navbar 
+.container-fluid
 {
     margin-left: 10%;
     margin-right: 10%;
