--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -13,27 +13,18 @@ html
 	margin: 0 auto;
     margin-top: 50px;
 }
+#home
+{
+    background-image: url('../images/background.jpg') no-repeat center center fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
 
 /* Navigation Bar */
-.navbar-brand
-{
-    padding: 0px !important;
-    margin: 0px !important;
-}
-.navbar-brand img
-{
-    height: 50px;
-    padding: 0px;
-}
 .container-fluid
 {
-	margin: 0 10% 0 10%;
-}
-.container-fluid
-{
-    margin-left: 10%;
-    margin-right: 10%;
-	margin-bottom: 0;
+    padding: 0 10% 0 10% !important;
 }
 
 /* Contact */
