--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -15,10 +15,25 @@ html
 }
 #home
 {
-    background-image: url('../images/background.jpg') no-repeat center center fixed;
+    background-image: url('../images/background.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    background-position: center;
+    width: 100% !important;
+    height: 100vh !important;
+    min-height: 100vh !important;
+    min-width: 100% !important;
+    margin-top: 50px;
+}
+#homeText
+{
+    padding-top: 10%;
+}
+#arrowDown i
+{
+    bottom: 10%;
+    position: absolute;
+    margin: 0 auto;
 }
 
 /* Navigation Bar */
