--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -47,6 +47,18 @@ html
 {
     width: 80%;
 }
+/***** EXPERIENCE *****/
+.companyName
+{
+    text-align: center;
+    font-family: 'latobold';
+}
+.companyDiv
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /* Navigation Bar */
 .container-fluid
@@ -97,111 +109,111 @@ footer
 /***** LATO *****/
 @font-face {
     font-family: 'latobold';
-    src: url('lato-bold-webfont.eot');
-    src: url('lato-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-bold-webfont.woff2') format('woff2'),
-         url('lato-bold-webfont.woff') format('woff'),
-         url('lato-bold-webfont.ttf') format('truetype'),
-         url('lato-bold-webfont.svg#latobold') format('svg');
+    src: url('../fonts/Lato/lato-bold-webfont.eot');
+    src: url('../fonts/Lato/lato-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-bold-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-bold-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-bold-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-bold-webfont.svg#latobold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latoitalic';
-    src: url('lato-italic-webfont.eot');
-    src: url('lato-italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-italic-webfont.woff2') format('woff2'),
-         url('lato-italic-webfont.woff') format('woff'),
-         url('lato-italic-webfont.ttf') format('truetype'),
-         url('lato-italic-webfont.svg#latoitalic') format('svg');
+    src: url('../fonts/Lato/lato-italic-webfont.eot');
+    src: url('../fonts/Lato/lato-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-italic-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-italic-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-italic-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-italic-webfont.svg#latoitalic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latohairline';
-    src: url('lato-hairline-webfont.eot');
-    src: url('lato-hairline-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-hairline-webfont.woff2') format('woff2'),
-         url('lato-hairline-webfont.woff') format('woff'),
-         url('lato-hairline-webfont.ttf') format('truetype'),
-         url('lato-hairline-webfont.svg#latohairline') format('svg');
+    src: url('../fonts/Lato/lato-hairline-webfont.eot');
+    src: url('../fonts/Lato/lato-hairline-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-hairline-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-hairline-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-hairline-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-hairline-webfont.svg#latohairline') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latobold_italic';
-    src: url('lato-bolditalic-webfont.eot');
-    src: url('lato-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-bolditalic-webfont.woff2') format('woff2'),
-         url('lato-bolditalic-webfont.woff') format('woff'),
-         url('lato-bolditalic-webfont.ttf') format('truetype'),
-         url('lato-bolditalic-webfont.svg#latobold_italic') format('svg');
+    src: url('../fonts/Lato/lato-bolditalic-webfont.eot');
+    src: url('../fonts/Lato/lato-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-bolditalic-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-bolditalic-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-bolditalic-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-bolditalic-webfont.svg#latobold_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latoblack';
-    src: url('lato-black-webfont.eot');
-    src: url('lato-black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-black-webfont.woff2') format('woff2'),
-         url('lato-black-webfont.woff') format('woff'),
-         url('lato-black-webfont.ttf') format('truetype'),
-         url('lato-black-webfont.svg#latoblack') format('svg');
+    src: url('../fonts/Lato/lato-black-webfont.eot');
+    src: url('../fonts/Lato/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-black-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-black-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-black-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-black-webfont.svg#latoblack') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latolight_italic';
-    src: url('lato-lightitalic-webfont.eot');
-    src: url('lato-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-lightitalic-webfont.woff2') format('woff2'),
-         url('lato-lightitalic-webfont.woff') format('woff'),
-         url('lato-lightitalic-webfont.ttf') format('truetype'),
-         url('lato-lightitalic-webfont.svg#latolight_italic') format('svg');
+    src: url('../fonts/Lato/lato-lightitalic-webfont.eot');
+    src: url('../fonts/Lato/lato-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-lightitalic-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-lightitalic-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-lightitalic-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-lightitalic-webfont.svg#latolight_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latohairline_italic';
-    src: url('lato-hairlineitalic-webfont.eot');
-    src: url('lato-hairlineitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-hairlineitalic-webfont.woff2') format('woff2'),
-         url('lato-hairlineitalic-webfont.woff') format('woff'),
-         url('lato-hairlineitalic-webfont.ttf') format('truetype'),
-         url('lato-hairlineitalic-webfont.svg#latohairline_italic') format('svg');
+    src: url('../fonts/Lato/lato-hairlineitalic-webfont.eot');
+    src: url('../fonts/Lato/lato-hairlineitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-hairlineitalic-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-hairlineitalic-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-hairlineitalic-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-hairlineitalic-webfont.svg#latohairline_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latoregular';
-    src: url('lato-regular-webfont.eot');
-    src: url('lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-regular-webfont.woff2') format('woff2'),
-         url('lato-regular-webfont.woff') format('woff'),
-         url('lato-regular-webfont.ttf') format('truetype'),
-         url('lato-regular-webfont.svg#latoregular') format('svg');
+    src: url('../fonts/Lato/lato-regular-webfont.eot');
+    src: url('../fonts/Lato/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-regular-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-regular-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-regular-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-regular-webfont.svg#latoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latoblack_italic';
-    src: url('lato-blackitalic-webfont.eot');
-    src: url('lato-blackitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-blackitalic-webfont.woff2') format('woff2'),
-         url('lato-blackitalic-webfont.woff') format('woff'),
-         url('lato-blackitalic-webfont.ttf') format('truetype'),
-         url('lato-blackitalic-webfont.svg#latoblack_italic') format('svg');
+    src: url('../fonts/Lato/lato-blackitalic-webfont.eot');
+    src: url('../fonts/Lato/lato-blackitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-blackitalic-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-blackitalic-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-blackitalic-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-blackitalic-webfont.svg#latoblack_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'latolight';
-    src: url('lato-light-webfont.eot');
-    src: url('lato-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-light-webfont.woff2') format('woff2'),
-         url('lato-light-webfont.woff') format('woff'),
-         url('lato-light-webfont.ttf') format('truetype'),
-         url('lato-light-webfont.svg#latolight') format('svg');
+    src: url('../fonts/Lato/lato-light-webfont.eot');
+    src: url('../fonts/Lato/lato-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Lato/lato-light-webfont.woff2') format('woff2'),
+         url('../fonts/Lato/lato-light-webfont.woff') format('woff'),
+         url('../fonts/Lato/lato-light-webfont.ttf') format('truetype'),
+         url('../fonts/Lato/lato-light-webfont.svg#latolight') format('svg');
     font-weight: normal;
     font-style: normal;
 }
