--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -55,7 +55,13 @@ html
 }
 .companyDiv
 {
+    display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
     justify-content: center;
 }
@@ -67,13 +73,27 @@ html
 }
     
 /* Contact */
+#socialMediaDiv
+{
+    display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+}
 #socialMediaLinks 
 {
     display: block;
+    padding-left: 0px;
 }
 #socialMediaLinks li
 {
     display: inline;
+    margin: 10px;
 }
 
 /* Footer */
