--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -40,7 +40,7 @@ p
 /***** HOME *****/
 #home
 {
-    background-image: url('../images/IMG_0373.JPG');
+    background-image: url('../images/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
