--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -133,9 +133,39 @@ p
 {
     padding: 0 10% 0 10% !important;
 }
+.navbar-nav
+{
+    float: none !important;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0;
+}
 .navbar-nav>li
 {
-    text-transform: uppercase
+    text-transform: uppercase;
+    float: none;
+    display: inline;
+}
+.navbar
+{
+    text-align: center;
+}
+.navbar .navbar-nav 
+{
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+}
+.navbar .navbar-collapse 
+{
+    text-align: center;
+}
+@media screen and (min-width: 768px) {
+    .navbar-header
+    {
+        display: none;
+    }
+    
 }
 
 /* Footer */
