Added tab index as well as adjusted the contact form

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -127,6 +127,14 @@ p
     font-family: 'clarendonbold';
     font-size: 2em;
 }
+#nameForm
+{
+    padding-left: 0 !important;
+}
+#emailForm
+{
+    padding-right: 0 !important;
+}
 
 /* Navigation Bar */
 .container-fluid
