--- a/assets/css/color-codes.css
+++ b/assets/css/color-codes.css
@@ -1,63 +1,51 @@
 /* CSS - Cascading Style Sheet */
 /* Palette color codes */
-/* Palette URL: http://paletton.com/#uid=74A0u0kllllaFw0g0qFqFg0w0aF */
+/* Palette URL: http://paletton.com/#uid=54f0S0kllllaFw0g0qFqFg0w0aF */
 
 /* Feel free to copy&paste color codes to your application */
 
 
 /* As hex codes */
 
-.color-primary-0 { color: #522B72 }	/* Main Primary color */
-.color-primary-1 { color: #9376AC }
-.color-primary-2 { color: #704C8F }
-.color-primary-3 { color: #371356 }
-.color-primary-4 { color: #210439 }
+.color-primary-0 { color: #413075 }	/* Main Primary color */
+.color-primary-1 { color: #887BAF }
+.color-primary-2 { color: #625192 }
+.color-primary-3 { color: #271758 }
+.color-primary-4 { color: #14073A }
 
-.color-secondary-1-0 { color: #7F2A68 }	/* Main Secondary color (1) */
-.color-secondary-1-1 { color: #BE7FAD }
-.color-secondary-1-2 { color: #9F4F89 }
-.color-secondary-1-3 { color: #5F1049 }
-.color-secondary-1-4 { color: #3F002E }
+.color-secondary-1-0 { color: #255C69 }	/* Main Secondary color (1) */
+.color-secondary-1-1 { color: #6B949E }
+.color-secondary-1-2 { color: #447784 }
+.color-secondary-1-3 { color: #0F434F }
+.color-secondary-1-4 { color: #012B35 }
 
-.color-secondary-2-0 { color: #86A136 }	/* Main Secondary color (2) */
-.color-secondary-2-1 { color: #DDF2A1 }
-.color-secondary-2-2 { color: #B0CA65 }
-.color-secondary-2-3 { color: #5F7914 }
-.color-secondary-2-4 { color: #3C5100 }
-
-.color-complement-0 { color: #AAA539 }	/* Main Complement color */
-.color-complement-1 { color: #FFFB00 }
-.color-complement-2 { color: #D4D06A }
-.color-complement-3 { color: #807B15 }
-.color-complement-4 { color: #555100 }
+.color-secondary-2-0 { color: #832C65 }	/* Main Secondary color (2) */
+.color-secondary-2-1 { color: #C583AE }
+.color-secondary-2-2 { color: #A45287 }
+.color-secondary-2-3 { color: #621046 }
+.color-secondary-2-4 { color: #42002B }
 
 
 
 /* As RGBa codes */
 
-.rgba-primary-0 { color: rgba( 82, 43,114,1) }	/* Main Primary color */
-.rgba-primary-1 { color: rgba(147,118,172,1) }
-.rgba-primary-2 { color: rgba(112, 76,143,1) }
-.rgba-primary-3 { color: rgba( 55, 19, 86,1) }
-.rgba-primary-4 { color: rgba( 33,  4, 57,1) }
+.rgba-primary-0 { color: rgba( 65, 48,117,1) }	/* Main Primary color */
+.rgba-primary-1 { color: rgba(136,123,175,1) }
+.rgba-primary-2 { color: rgba( 98, 81,146,1) }
+.rgba-primary-3 { color: rgba( 39, 23, 88,1) }
+.rgba-primary-4 { color: rgba( 20,  7, 58,1) }
 
-.rgba-secondary-1-0 { color: rgba(127, 42,104,1) }	/* Main Secondary color (1) */
-.rgba-secondary-1-1 { color: rgba(190,127,173,1) }
-.rgba-secondary-1-2 { color: rgba(159, 79,137,1) }
-.rgba-secondary-1-3 { color: rgba( 95, 16, 73,1) }
-.rgba-secondary-1-4 { color: rgba( 63,  0, 46,1) }
+.rgba-secondary-1-0 { color: rgba( 37, 92,105,1) }	/* Main Secondary color (1) */
+.rgba-secondary-1-1 { color: rgba(107,148,158,1) }
+.rgba-secondary-1-2 { color: rgba( 68,119,132,1) }
+.rgba-secondary-1-3 { color: rgba( 15, 67, 79,1) }
+.rgba-secondary-1-4 { color: rgba(  1, 43, 53,1) }
 
-.rgba-secondary-2-0 { color: rgba(134,161, 54,1) }	/* Main Secondary color (2) */
-.rgba-secondary-2-1 { color: rgba(221,242,161,1) }
-.rgba-secondary-2-2 { color: rgba(176,202,101,1) }
-.rgba-secondary-2-3 { color: rgba( 95,121, 20,1) }
-.rgba-secondary-2-4 { color: rgba( 60, 81,  0,1) }
-
-.rgba-complement-0 { color: rgba(170,165, 57,1) }	/* Main Complement color */
-.rgba-complement-1 { color: rgba(255,251,170,1) }
-.rgba-complement-2 { color: rgba(212,208,106,1) }
-.rgba-complement-3 { color: rgba(128,123, 21,1) }
-.rgba-complement-4 { color: rgba( 85, 81,  0,1) }
+.rgba-secondary-2-0 { color: rgba(131, 44,101,1) }	/* Main Secondary color (2) */
+.rgba-secondary-2-1 { color: rgba(197,131,174,1) }
+.rgba-secondary-2-2 { color: rgba(164, 82,135,1) }
+.rgba-secondary-2-3 { color: rgba( 98, 16, 70,1) }
+.rgba-secondary-2-4 { color: rgba( 66,  0, 43,1) }
 
 
 
