unsuccessful in trying to get active links to work

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -191,6 +191,10 @@ form
 {
     text-align: center;
 }
+a.navActiveLink
+{
+    color: #5F7914;
+}
 @media screen and (min-width: 768px) {
     .navbar-header
     {
