--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -191,9 +191,9 @@ form
 {
     text-align: center;
 }
-a.navActiveLink
+.navbar-nav>li>a active, a.navActiveLink
 {
-    color: #5F7914;
+    color: #5F7914 !important;
 }
 @media screen and (min-width: 768px) {
     .navbar-header
