fonts adjusting based on the new google fonts

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -13,18 +13,18 @@ body
 /* Text Elements */
 h1
 {
-    font-family: 'Raleway', 'Helvetica Neue', 'Open Sans', sans-serif !important;
-    font-weight: 500;
+    font-family: 'Raleway' !important;
+    font-weight: 500 !important;
 }
 h2
 {
-    font-family: 'Raleway', 'Helvetica Neue', 'Open Sans', sans-serif !important;
-    font-weight: 400;
+    font-family: 'Raleway' !important;
+    font-weight: 400 !important;
 }
 h4
 {
-    font-family: 'Raleway', 'Helvetica Neue', 'Open Sans', sans-serif !important;
-    font-weight: 300;
+    font-family: 'Raleway' !important;
+    font-weight: 300 !important;
 }
 p
 {
@@ -69,7 +69,7 @@ p
 }
 #homeText
 {
-    padding-top: 10%;
+    padding-top: 9%;
 }
 #homeText h1
 {
@@ -94,7 +94,7 @@ p
 .companyName
 {
     text-align: center;
-    font-family: 'Raleway', 'Open Sans', sans-serif !important;
+    font-family: 'Raleway', sans-serif !important;
     font-weight: 400;
 }
 .companyDiv, .projectDiv
@@ -152,7 +152,7 @@ form
 }
 #mediumIcon
 {
-    font-family: 'clarendonbold';
+    font-family: 'clarendonbold', sans-serif;
     font-size: 2em;
 }
 #nameForm
