--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -10,6 +10,35 @@ body
     font-family: 'Open Sans', sans-serif !important;
 }
 
+/* Color variables */
+.color-primary-0 { color: #413075 }	/* Main Primary color */
+.color-primary-1 { color: #887BAF }
+.color-primary-2 { color: #625192 }
+.color-primary-3 { color: #271758 }
+.color-primary-4 { color: #14073A }
+
+.color-secondary-1-0 { color: #255C69 }	/* Main Secondary color (1) */
+.color-secondary-1-1 { color: #6B949E }
+.color-secondary-1-2 { color: #447784 }
+.color-secondary-1-3 { color: #0F434F }
+.color-secondary-1-4 { color: #012B35 }
+
+.color-secondary-2-0 { color: #832C65 }	/* Main Secondary color (2) */
+.color-secondary-2-1 { color: #C583AE }
+.color-secondary-2-2 { color: #A45287 }
+.color-secondary-2-3 { color: #621046 }
+.color-secondary-2-4 { color: #42002B }
+
+/* Link Elements */
+a
+{
+    color: #413075 !important;
+}
+a:hover
+{
+    color: #271758 !important;
+}
+
 /* Text Elements */
 h1
 {
@@ -35,6 +64,12 @@ p
 .btn
 {
     border-radius: 20px !important;
+    background-color: #413075 !important;
+    border-color: #413075 !important;
+}
+button:hover
+{
+    background-color: #271758 !important;
 }
 
 /* Major Divs */
@@ -42,6 +77,7 @@ p
 {
     text-transform: uppercase;
 }
+
 /***** WRAPPER *****/
 .wrapper
 {
@@ -49,11 +85,13 @@ p
 	margin: 0 auto;
     margin-top: 50px;
 }
+
 /***** FILLER *****/
 #filler
 {
     height: 30px;
 }
+
 /***** HOME *****/
 #home
 {
@@ -82,7 +120,9 @@ p
     bottom: 10%;
     position: absolute;
 }
+
 /***** ABOUT *****/
+
 /***** EDUCATION *****/
 .col-md-3>p>img
 {
@@ -90,6 +130,7 @@ p
     display: inline-block;
     margin: auto;
 }
+
 /***** EXPERIENCE *****/
 .companyName
 {
@@ -109,6 +150,7 @@ p
     align-items: center;
     justify-content: center;
 }
+
 /***** PROJECTS *****/
 /***** SKILLS *****/
 #skillLevelLegend
@@ -172,6 +214,7 @@ form
 .container-fluid
 {
     padding: 0 10% 0 10% !important;
+    background-color: #A45287;
 }
 .navbar-nav
 {
@@ -203,6 +246,7 @@ form
 .navbar-nav>li>a:hover, .navbar-nav>li>a:active, a.navActiveLink
 {
     color: #5F7914 !important;
+    background-color: #413075 !important;
 }
 @media screen and (min-width: 768px) 
 {
