--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -268,7 +268,7 @@ form
 {
     text-align: center;
 }
-.navbar-nav>li>a:active, a.navActiveLink
+a.navActiveLink
 {
     color: #5F7914 !important;
     background-color: #413075 !important;
