--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -232,6 +232,10 @@ form
 }
 
 /* Navigation Bar */
+.navbar-default
+{
+    border: none !important;
+}
 .navbar-brand
 {
     color: #413075 !important;
