--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -86,10 +86,10 @@ button:hover
 .wrapper
 {
 	width: 100%;
-    padding: 50px 10% 0 10%;
+    padding: 50px 10% 50px 10%;
 	margin: 0 auto;
     /*margin-top: 50px;*/
-    background-color: #887BAF;
+    background-color: #C583AE;
 }
 
 /***** FILLER *****/
