--- a/media/list.mustache
+++ b/media/list.mustache
@@ -16,9 +16,26 @@
 <body>
     <div class="container">
         <h1 class="text-center">Media Roundups</h1>
-        {{#roundups}}
-        <p><a href="{{link}}">{{month}} {{year}}</a></p>
-        {{/roundups}}
+        <p>I enjoy reading and listening to music. I am also committed to sharing what I'm reading more publicly so that perhaps folx can get some inspiration for what they want to read next and also in reverse, I can find some inspiration from others for what I can read next. In addition, I hope to use this as a way to figure out an accountability mechanism for myself to read more diverse voices, both within the US and also globally.</p>
+        <div class="row">
+            <div class="one-half column">
+                <p>For 2020 (and hopefully beyond), I plan on tracking every single book and album I've consumed and doing a monthly round up (save for 2020 itself, because...you know).</p>
+                <ul>
+                    {{#roundups}}
+                    <li><a href="{{link}}">{{month}} {{year}}</a></li>
+                    {{/roundups}}
+                </ul>
+            </div>
+            <div class="one-half column">
+                <p>I definitely want to read as many different voices as possible, but also want to share and amplify the voices that really resonated with me. Here are a few lists of books that I particularly enjoyed by voices who are not white cis hetero men.</p>
+                <ul>
+                    {{#diverse}}
+                    <li><a href="{{link}}">Books by {{type}} authors</a></li>
+                    {{/diverse}}
+                </ul>
+            </div>
+        </div>
+        
         <a class="button button-secondary" href="../">Home</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
